feat: upgrade docs, introduce Kilpi.scoped

--- a/apps/docs/src/content/docs/concepts/authorization-object.mdx
+++ b/apps/docs/src/content/docs/concepts/authorization-object.mdx
@@ -1,5 +1,5 @@
 ---
-title: Authorization
+title: Authorization object
 ---
 
 When a policy is evaluated, it returns an **authorization object**. An authorization can be `granted` or `denied`.
