--- a/apps/docs/src/content/docs/concepts/policy.mdx
+++ b/apps/docs/src/content/docs/concepts/policy.mdx
@@ -2,7 +2,7 @@
 title: Policy
 ---
 
-**A policy** is a function that receives a [**subject**](/concepts/subject) and optionally a **resource** and returns an [**authorization object**](/concepts/authorization), either granted or denied.
+**A policy** is a function that receives a [**subject**](/concepts/subject) and optionally a **resource** and returns an [**authorization object**](/concepts/authorization-object), either granted or denied.
 
 A policy defines an **action** that can be taken in your application, optionally **on a resource**, such as `documents:read`, `users:update`, `comments:delete`.
 
