--- a/apps/docs/src/content/docs/getting-started/support.mdx
+++ b/apps/docs/src/content/docs/getting-started/support.mdx
@@ -2,7 +2,7 @@
 title: Support development
 ---
 
-Kilpi is free to use and will always remain so and I am committed to maintaining Kilpi, as I am using it in multiple production projects. However, developing and maintaining a large scale open-source library "as a hobby" may not be sustainable in the long run.
+Kilpi is free to use and will always remain so and I am committed to maintaining Kilpi, as I am using it in multiple production projects. However, developing and maintaining an open-source library "as a hobby" may not be sustainable in the long run.
 
 ## Supporting development
 
@@ -18,7 +18,7 @@ Kilpi is open-source. This means you are free to contribute. [Clone the reposito
 Instructions on contributing to Kilpi are coming soon. For now, you can clone the repository and start creating pull requests.
 :::
 
-Help is especially needed in **improving the documentation** and **adapting Kilpi to other frameworks**, such as:
+Help is especially needed in **improving the documentation** and **adapting Kilpi to other frameworks** (either by providing installation guides or new plugins for components and automatic scoping), such as:
 - Tanstack Start
 - Vue and Nuxt
 - Svelte and SvelteKit
@@ -29,3 +29,4 @@ Help is especially needed in **improving the documentation** and **adapting Kilp
 - Fresh
 - Elysia
 - Ultra
+- ...
