--- a/apps/docs/src/content/docs/getting-started/usage-on-client.mdx
+++ b/apps/docs/src/content/docs/getting-started/usage-on-client.mdx
@@ -6,11 +6,13 @@ import { Steps } from "@astrojs/starlight/components";
 import { Tabs, TabItem } from "@astrojs/starlight/components";
 import { FileTree } from '@astrojs/starlight/components';
 
-You can also use Kilpi on the client-side.
+You can also use Kilpi on the client-side, as long as you have a server-side instance of Kilpi you can connect to using the [endpoint plugin](https://kilpi.dev/docs/plugins/endpoint).
 
-:::note
-By design, all authorization is performed on the server. The `@kilpi/client` package only fetches authorization decisions from the server, with request caching, batching and deduping.
-:::
+This works especially well with frameworks like Next.js, where you can import the type of the server-side instance on the client and use it for type inference, similarly as with [tRPC](https://trpc.io/).
+
+By design, **all authorization is performed on the server**. The `@kilpi/client` package only fetches authorization decisions from the server, **with request caching, batching, and deduping** for performance.
+
+---
 
 <Steps>
 
@@ -49,13 +51,13 @@ By design, all authorization is performed on the server. The `@kilpi/client` pac
     Create **public** environment variables (e.g. with `NEXT_PUBLIC_` or similar prefix to ensure they are included in the client bundle).
 
     ```bash
-    NEXT_PUBLIC_KILPI_URL=http://localhost:3000/api/kilpi
-    NEXT_PUBLIC_KILPI_SECRET=my-public-secret-value
+    PUBLIC_KILPI_URL=http://localhost:3000/api/kilpi
+    PUBLIC_KILPI_SECRET=my-secret-but-public-value
     ```
 
 3.  ### Provide an authorization endpoint
 
-    Use the `EndpointPlugin` provided by `@kilpi/core` to create an authorization endpoint. It exposes the `Kilpi.createPostEndpoint()` function, which constructs a web-standard request-response functions. Expose it using your framework of choice.
+    Use the [EndpointPlugin](/plugins/endpoint) provided by `@kilpi/core` to create an authorization endpoint. It exposes the `Kilpi.createPostEndpoint()` function, which constructs a web-standard request-response function to use as your endpoint.
 
     ```ts
     // kilpi.ts
@@ -67,6 +69,8 @@ By design, all authorization is performed on the server. The `@kilpi/client` pac
     })
     ```
 
+    Expose the endpoint using your framework of choice.
+
     <Tabs syncKey="backend">
       <TabItem label="Next.js (App router)">
         ```ts
@@ -74,11 +78,20 @@ By design, all authorization is performed on the server. The `@kilpi/client` pac
         export const POST = Kilpi.createPostEndpoint();
         ```
       </TabItem>
+      <TabItem label="Hono">
+        ```ts
+        const endpoint = Kilpi.createPostEndpoint();
+
+        app.post('/api/kilpi', async (c) => await endpoint(c.req.raw));
+        ```
+      </TabItem>
     </Tabs>
+
+    More guides are coming, but as the `Kilpi.createPostEndpoint()` returns a web-standard request-response function, you can use it with any framework that supports web standards, or create a wrapper around it to support web standards yourself.
 
 4.  ### Create your `KilpiClient` instance.
 
-    Create your `KilpiClient` instance with `createKilpiClient`.
+    Create your `KilpiClient` instance with `createKilpiClient`. This object is used to fetch authorization decisions from the server.
 
     ```ts
     // kilpi-client.ts
@@ -95,7 +108,7 @@ By design, all authorization is performed on the server. The `@kilpi/client` pac
 
 5.  ### Start using on the client
 
-    Now you can use the `KilpiClient` instance to fetch the subject and authorization decisions. For passing query options, such as abort signals, it has a different signature than the server side `Kilpi` instance.
+    Now you can use the `KilpiClient` instance to fetch the subject and authorization decisions. To enable passing query options, such as abort signals, it has a different signature than the server side `Kilpi` instance.
     
     ```ts
     const subject = await KilpiClient.fetchSubject();
@@ -118,6 +131,14 @@ By design, all authorization is performed on the server. The `@kilpi/client` pac
   
 6.  ### Integrate into your frontend framework of choice
 
-    Upcoming: `@kilpi/react-client` and other `@kilpi/client` bindings for popular frontend frameworks.
+    Use `@kilpi/client` directly with your frontend framework of choice or use one of the provided plugins.
+
+    <Tabs syncKey="frontend">
+      <TabItem label="React">
+        The `@kilpi/react-client` package provides hooks and components for using Kilpi with React on the client.
+
+        View [the documentation](/plugins/react-client) for the React Client plugin to start using it.
+      </TabItem>
+    </Tabs>
 
 </Steps>
