--- a/apps/docs/src/content/docs/plugins/react-server-components.mdx
+++ b/apps/docs/src/content/docs/plugins/react-server-components.mdx
@@ -68,7 +68,7 @@ Use the `Kilpi.ReactServer.createComponents` function (provided by the plugin) t
 
 ```ts
 // kilpi.components.ts
-export const { Access } = Kilpi.ReactServer.createComponents(Kilpi);
+export const { Access } = Kilpi.ReactServer.createComponents();
 ```
 
 ### `<Access />`
