--- a/apps/docs/src/content/docs/installation/next.mdx
+++ b/apps/docs/src/content/docs/installation/next.mdx
@@ -25,20 +25,21 @@ The React Server Components Plugin can't automatically [provide a scope](/concep
     The [`ReactServerComponentPlugin` from `@kilpi/react-server`](/plugins/react-server) automatically provides a scope for react server components.
   </TabItem>
   <TabItem label="Server actions">
-    Wrap each server action with `Kilpi.runInScope` as follows.
+    Wrap each server action with `Kilpi.scoped` as follows.
 
     ```ts
     // action.ts
     "use server"
 
-    export async function myServerAction() {
-      return await Kilpi.runInScope(async () => {
-        // Your logic wrapper in scope
-      });
-    }
+    export const myServerAction = Kilpi.scoped(async () => {
+      // Works due to Kilpi.scoped
+      await Kilpi.onUnauthorized(() => { ... });
+      await Kilpi.authorize(...); 
+      // ...
+    });
     ```
 
-    Or better, when using `next-safe-action` or similar framework for authoring server actions, you can use the middleware approach as follows.
+    Or better, when using `next-safe-action` or similar framework for authoring server actions, you can use the middleware approach as follows with `Kilpi.runInScope`.
 
     ```ts
     export const ActionClient = createSafeActionClient({})
@@ -54,16 +55,17 @@ The React Server Components Plugin can't automatically [provide a scope](/concep
     ```
   </TabItem>
   <TabItem label="Endpoints">
-    Wrap each endpoint with `Kilpi.runInScope` as follows.
+    Wrap each endpoint with `Kilpi.scoped` as follows.
 
     ```ts
     // route.ts
-    export const POST = async function handle(request: Request) {
-      return await Kilpi.runInScope(async () => {
-        // Your endpoint...
-        return new Response();
-      });
-    }
+    export const POST = Kilpi.scoped(async (request: Request) => {
+      // Works due to Kilpi.scoped
+      await Kilpi.onUnauthorized(() => { ... });
+      await Kilpi.authorize(...); 
+      // ...
+      return new Response();
+    });
     ```
   </TabItem>
 </Tabs>
