--- a/apps/docs/docs/getting-started/quickstart.mdx
+++ b/apps/docs/docs/getting-started/quickstart.mdx
@@ -8,135 +8,145 @@ Get started quickly with Kilpi using this guide.
 
 <Steps>
 
-1.  ### Install Kilpi
+<Step>
+### Install Kilpi
 
-    <Tabs syncKey="package-manager">
-      <Tab label="npm">
-        ```bash
-        npm install @kilpi/core
-        ```
-      </Tab>
+<Tabs syncKey="package-manager">
+  <Tab label="npm">
+    ```bash
+    npm install @kilpi/core
+    ```
+  </Tab>
 
-      <Tab label="yarn">
-        ```bash
-        yarn add @kilpi/core
-        ```
-      </Tab>
+  <Tab label="yarn">
+    ```bash
+    yarn add @kilpi/core
+    ```
+  </Tab>
 
-      <Tab label="pnpm">
-        ```bash
-        pnpm add @kilpi/core
-        ```
-      </Tab>
+  <Tab label="pnpm">
+    ```bash
+    pnpm add @kilpi/core
+    ```
+  </Tab>
 
-      
-      <Tab label="bun">
-        ```bash
-        bun add @kilpi/core
-        ```
-      </Tab>
-    </Tabs>
-
-
-2.  ### Create a `kilpi` directory
-
-    In your `src` folder (or equivalent), create a `kilpi` directory with the following file structure.
-
-    <FileTree>
-
-    - src
-      - kilpi
-        - policies.ts // Define your policies here
-        - subject.ts // Define your subject here
-        - kilpi.ts // Create and export your Kilpi instance here
-
-    </FileTree>
-
-    This is only a suggestion.
-
-    See [project structure](/docs/getting-started/project-structure) for more information on the recommended project structure.
+  
+  <Tab label="bun">
+    ```bash
+    bun add @kilpi/core
+    ```
+  </Tab>
+</Tabs>
+</Step>
 
 
+<Step>
+### Create a `kilpi` directory
 
-3.  ### Create your subject
+In your `src` folder (or equivalent), create a `kilpi` directory with the following file structure.
 
-    Create `subject.ts` and create a `Subject` type and a `getSubject` function to wrap your authentication provider.
+<FileTree>
 
-    This function will automatically be called (and [cached](/docs/concepts/subject#subject-caching)) by Kilpi while authorizing.
+- src
+  - kilpi
+    - policies.ts // Define your policies here
+    - subject.ts // Define your subject here
+    - kilpi.ts // Define your Kilpi instance here
 
-    ```ts
-    // src/kilpi/subject.ts
-    export type Subject = { id: string, email: string, name: string };
+</FileTree>
 
-    export async function getSubject(): Promise<Subject | null> {
-      const session = await getSession(); // From your auth provider
-      if (!session) return null;
-      return { id: session.id, email: session.email, name: session.name };
+This is only a suggestion.
+
+See [project structure](/docs/getting-started/project-structure) for more information on the recommended project structure.
+</Step>
+
+<Step>
+### Create your subject
+
+Create `subject.ts` and create a `Subject` type and a `getSubject` function to wrap your authentication provider.
+
+This function will automatically be called (and [cached](/docs/concepts/subject#subject-caching)) by Kilpi while authorizing.
+
+```ts
+// src/kilpi/subject.ts
+export type Subject = { id: string, email: string, name: string };
+
+export async function getSubject(): Promise<Subject | null> {
+  const session = await getSession(); // From your auth provider
+  if (!session) return null;
+  return { id: session.id, email: session.email, name: session.name };
+}
+```
+
+[Read more about subjects](/docs/concepts/subject).
+</Step>
+
+<Step>
+### Create your policies
+
+Create `policies.ts` where you define all policies. This will be the main place to define your authorization logic.
+
+For improved typesafety, add `as const satisfies Policyset<YourSubjectType>`. It type-checks your return types and automatically infers the `user` type.
+
+```ts
+// src/kilpi/policies.ts
+import { type Policyset, deny, grant } from "@kilpi/core";
+import type { Subject } from "./subject";
+
+const policies = {
+  documents: {
+    // Create a policy that does not take in a resource:
+    // All authed users can create documents
+    create(user) {
+      if (!user) return deny("Unauthenticated");
+      return grant(user);
     }
-    ```
 
-    [Read more about subjects](/docs/concepts/subject).
+    // Create a policy that takes in a resource:
+    // All authed users can read documents they own or public documents
+    read(user, document: Document) {
+      if (!user) return deny("Unauthenticated");
+      if (document.isPublic) return grant(user);
+      if (user.id === document.ownerId) return grant(user);
+      return deny();
+    },
+  },
+} as const satisfies Policyset<Subject | null>
+```
 
-4.  ### Create your policies
+[Read more about policies](/docs/concepts/policy).
+</Step>
 
-    Create `policies.ts` where you define all policies. This will be the main place to define your authorization logic.
+<Step>
+### Create your Kilpi instance
 
-    For improved typesafety, add `as const satisfies Policyset<YourSubjectType>`. It type-checks your return types and automatically infers the `user` type.
+Create `kilpi.ts` where you create your Kilpi instance from your subject and policies. The `Kilpi` object will be used primarily for authorization.
 
-    ```ts
-    // src/kilpi/policies.ts
-    import { type Policyset, deny, grant } from "@kilpi/core";
-    import type { Subject } from "./subject";
+```ts
+// src/kilpi/kilpi.ts
+import { createKilpi } from "@kilpi/core";
+import { getSubject } from "./subject";
+import { policies } from "./policies";
 
-    const policies = {
-      documents: {
-        // Create a policy that does not take in a resource:
-        // All authed users can create documents
-        create(user) {
-          if (!user) return deny("Unauthenticated");
-          return grant(user);
-        }
+export const Kilpi = createKilpi({ getSubject, policies });
+```
 
-        // Create a policy that takes in a resource:
-        // All authed users can read documents they own or public documents
-        read(user, document: Document) {
-          if (!user) return deny("Unauthenticated");
-          if (document.isPublic) return grant(user);
-          if (user.id === document.ownerId) return grant(user);
-          return deny();
-        },
-      },
-    } as const satisfies Policyset<Subject | null>
-    ```
+> Also list any plugins, default behaviours and other configuration here.
+</Step>
 
-    [Read more about policies](/docs/concepts/policy).
+<Step>
+### Protect your first function
 
-5.  ### Create your Kilpi instance
+Create a function that you want to protect with Kilpi, using for example the `Kilpi.authorize` method.
 
-    Create `kilpi.ts` where you create your Kilpi instance from your subject and policies. The `Kilpi` object will be used primarily for authorization.
-
-    ```ts
-    // src/kilpi/kilpi.ts
-    import { createKilpi } from "@kilpi/core";
-    import { getSubject } from "./subject";
-    import { policies } from "./policies";
-
-    export const Kilpi = createKilpi({ getSubject, policies });
-    ```
-
-    > Also list any plugins, default behaviours and other configuration here.
-
-6.  ### Protect your first function
-
-    Create a function that you want to protect with Kilpi, using for example the `Kilpi.authorize` method.
-
-    ```ts
-    // myFunction.ts
-    export async function myFunction() {
-      await Kilpi.authorize("documents:create");
-      // Your logic here ...
-    }
-    ```
+```ts
+// myFunction.ts
+export async function myFunction() {
+  await Kilpi.authorize("documents:create");
+  // Your logic here ...
+}
+```
+</Step>
 </Steps>
 
 ## Next steps
