--- a/apps/docs/docs/concepts/scope.mdx
+++ b/apps/docs/docs/concepts/scope.mdx
@@ -6,9 +6,9 @@ title: Scope
 
 It is used to store e.g. the current `onUnauthorized` handler set in `Kilpi.onUnauthorized`, as well as to cache the current subject.
 
-:::caution
+<Aside type="warning">
 To use certain APIs, such as `Kilpi.onUnauthorized` you must ensure you are calling them within a scope.
-:::
+</Aside>
 
 ### Explicit scope
 
