--- a/apps/docs/docs/getting-started/introduction.mdx
+++ b/apps/docs/docs/getting-started/introduction.mdx
@@ -62,9 +62,9 @@ Kilpi may not suit you, if you...
 - Require a ready-made no-code interface or a domain-specific language for policies.
 - Require an authorization model that provides its own implementation for roles, permissions, etc.
 
-:::note
+<Aside>
 If you are building a **client-only** application with TypeScript, Kilpi does not yet provide client-only authorization.
-:::
+</Aside>
 
 ---
 
