--- a/apps/docs/docs/getting-started/support.mdx
+++ b/apps/docs/docs/getting-started/support.mdx
@@ -14,9 +14,9 @@ You can help keep the coffee flowing to receive active maintenance and new featu
 
 Kilpi is open-source. This means you are free to contribute. [Clone the repository and create your first pull request on Github](https://github.com/Jussinevavuori/kilpi). Even opening issues and feature requests is a great way to contribute.
 
-:::note
+<Aside>
 Instructions on contributing to Kilpi are coming soon. For now, you can clone the repository and start creating pull requests.
-:::
+</Aside>
 
 Help is especially needed in **improving the documentation** and **adapting Kilpi to other frameworks** (either by providing installation guides or new plugins for components and automatic scoping), such as:
 - Tanstack Start
@@ -29,4 +29,5 @@ Help is especially needed in **improving the documentation** and **adapting Kilp
 - Fresh
 - Elysia
 - Ultra
-- ...
+
+And many others.
