--- a/apps/docs/docs/getting-started/usage-on-client.mdx
+++ b/apps/docs/docs/getting-started/usage-on-client.mdx
@@ -121,9 +121,9 @@ By design, **all authorization is performed on the server**. The `@kilpi/client`
     });
     ```
 
-    :::note
+    <Aside>
     All requests are **cached**, **deduped** and **batched** for performance. You can clear the cache with `KilpiClient.clearCache()` and control the batching options in `createKilpiClient` with the `batching` option.
-    :::
+    </Aside>
   
 6.  ### Integrate into your frontend framework of choice
 
