--- a/apps/docs/docs/guides/protecting-queries.mdx
+++ b/apps/docs/docs/guides/protecting-queries.mdx
@@ -95,9 +95,9 @@ A common use case for queries that return arrays is to return only the entries t
 
 Kilpi provides the `Kilpi.filter` utility for this purpose.
 
-:::note
+<Aside>
 `Kilpi.filter` must be used with a policy that takes in a resource.
-:::
+</Aside>
 
 ```ts {4,17}
 // "documents:read" must take in a document as the resource
