--- a/apps/docs/docs/advanced/abac.mdx
+++ b/apps/docs/docs/advanced/abac.mdx
@@ -5,11 +5,11 @@ sidebar:
   order: 1
 ---
 
-:::note
+<Aside>
 With Kilpi, you don't have to decide between [RBAC](/docs/advanced/rbac), [ABAC](/docs/advanced/abac), [ReBAC](/docs/advanced/rebac) or other access control models. Kilpi allows fluidly mixing them together based on your needs with a single declarative API. Besides, [RBAC](/docs/advanced/rbac), [ABAC](/docs/advanced/abac) and [ReBAC](/docs/advanced/rebac) are not completely separate models (e.g. [RBAC](/docs/advanced/rbac) is a subset of [ABAC](/docs/advanced/abac)).
 
 This guide is a tutorial on how to implement authorization policies that would fall under the term of ABAC.
-:::
+</Aside>
 
 Implementing attribute-based access control (ABAC) with Kilpi is trivial as the Policy API is built to support it.
 
