--- a/apps/docs/docs/advanced/rbac.mdx
+++ b/apps/docs/docs/advanced/rbac.mdx
@@ -5,17 +5,17 @@ sidebar:
   order: 1
 ---
 
-:::note
+<Aside>
 With Kilpi, you don't have to decide between [RBAC](/docs/advanced/rbac), [ABAC](/docs/advanced/abac), [ReBAC](/docs/advanced/rebac) or other access control models. Kilpi allows fluidly mixing them together based on your needs with a single declarative API. Besides, [RBAC](/docs/advanced/rbac), [ABAC](/docs/advanced/abac) and [ReBAC](/docs/advanced/rebac) are not completely separate models (e.g. [RBAC](/docs/advanced/rbac) is a subset of [ABAC](/docs/advanced/abac)).
 
 This guide is a tutorial on how to implement authorization policies that would fall under the term of RBAC.
-:::
+</Aside>
 
-:::tip
+<Aside type="tip">
 Before implementing RBAC, carefully consider whether [ABAC](/docs/advanced/abac) or a [Permissions Based System](/docs/advanced/permissions) would be more suitable for your use case as RBAC is often a simplistic approach.
 
 Furthermore, [implementing permissions](/docs/advanced/permissions) instead of roles may allow for a more flexible authorization system, if needed. Roles can be seen as a user-facing abstraction of permissions, instead of an attribute of the user.
-:::
+</Aside>
 
 Implementing a role-based access control with Kilpi is simple with the `createRbacPolicy` utility, which is an alternative policy constructor API.
 
