--- a/apps/docs/docs/concepts/hooks.mdx
+++ b/apps/docs/docs/concepts/hooks.mdx
@@ -2,9 +2,9 @@
 title: Hooks
 ---
 
-:::note
+<Aside>
 This is an advanced concept and not required for most use-cases.
-:::
+</Aside>
 
 Hooks are a flexible API that allows hooking into the functionality of the core library. They are used to customize and extend the behavior of Kilpi.
 
