--- a/apps/docs/docs/getting-started/examples.mdx
+++ b/apps/docs/docs/getting-started/examples.mdx
@@ -2,7 +2,7 @@
 title: Examples
 ---
 
-To help you get started, we've provided examples of using Kilpi in your application.  They can all be found in the `/examples` folder on [Github](https://github.com/Jussinevavuori/kilpi/tree/main/examples). Find your example below.
+To help you get started, we've provided example projects.  They can all be found in the `/examples` folder on [Github](https://github.com/Jussinevavuori/kilpi/tree/main/examples). Find your example below.
 
 - [**Next.js App Router — News Demo**](https://github.com/Jussinevavuori/kilpi/tree/main/examples/next-rsc-demo)
 
